# apfelxx_photon_mod

./: .gitignore  CMakeLists.txt  README.md  test_document.txt
Calculations_etc/: CalculationDISAdditionalPartsForK.nb  CalculationDISAdditionalPartsForK_Pgq.nb  CalculationDISAdditionalPartsForK_Pqq.nb  CalculationDISAdditionalPartsForK_overnight1.nb  CalculationDISAdditionalPartsForK_overnight2.nb  CalculationDISAdditionalPartsForK_overnight3.nb  CalculationDISAdditionalPartsForK_overnight4.nb  CalculationDISAdditionalPartsForK_overnight_results.md  CalculationDISAdditionalPartsForK_result.txt  CalculationDISPqqBgamma.txt  CalculationPLSumRule.nb
bashFiles/: .bash_aliases  .bash_aliases_apfel  README.md  change_Apfel_Installation.sh  change_LHAPDF_Installation.sh  makeLHAPDF.sh  makeLHAPDFHO.sh  makeLHAPDFLO.sh  run_Evolution.sh  run_EvolutionFlavors.sh  run_EvolutionLHAPDF.sh  run_Minimization.sh  run_StructureFunctions.sh  run_StructureFunctionsErrorPDFs.sh  run_StructureFunctionsLHAPDF.sh
mainPrograms/: Evolution.cc  EvolutionLHAPDF.cc  README.md  StructureFunctions.cc  StructureFunctionsLHAPDF.cc
makeLHAPDF/: README.md  comparison_data_old_new_makeLHAPDF.txt  grvphoton.f  makeLHAPDF.f  makeLHAPDFHO.f  makeLHAPDFLO.f  testMomentumSum.f
minimizationMinuit/: CalculationDISAdditionalPartsForK.nb  CalculationDISAdditionalPartsForK_result.txt  CalculationDISAdditionalPartsForK_tuesday.nb  CalculationDISPqqBgamma.txt  DeltaChi2.cc  DeltaChi2.h  ErrorPDFs.cc  ErrorPDFs.h  ErrorPDFsDraft.txt  HelperFunctions.cc  HelperFunctions.h  HessianMatrix.cc  HessianMatrix.h  (+20 more)
(+256 files in other folders)
